* Thu Sep 1 2011 Thunor <thunorsif@hotmail.com>
- Reorganised the examples folder into subfolders.

* Tue Aug 30 2011 Thunor <thunorsif@hotmail.com>
- Fixed the tree widget's <input file> directive.
- Fixed examples 09.01-tree_attributes, 09.01-tree_items and
  09.02-tree_default_pixmaps and added list.txt.

* Mon Aug 29 2011 Thunor <thunorsif@hotmail.com>
- New widget: <statusbar>.
- Modified save_menuitem_to_file to save "true" or "false" to make it
  consistent with the togglebutton widget.

* Thu Aug 25 2011 Thunor <thunorsif@hotmail.com>
- Overhauled the fileselect action function which includes file filters.
- Added a list_t_free() function to free list_t structs if required.

* Tue Aug 23 2011 Thunor <thunorsif@hotmail.com>
- Modified icon from theme code so that a gtk-missing-image is shown
  when an image isn't found, similar to the image from file code.
- Tweaked the button image loading code to better accommodate the
  togglebutton's <input> directive.
- Added support for the save action function to the togglebutton widget.

* Mon Aug 22 2011 Thunor <thunorsif@hotmail.com>
- New widget: <togglebutton>.
- Purged almost all of the code marked redundant.
- Added widget_template.c/h which I've been using for a while now.

* Sun Aug 21 2011 Thunor <thunorsif@hotmail.com>
- Fixed invisible-char in 02.01-entry_attributes as it is a guint not a
  gchar (it worked before because the guint code was bugged).
- Updated a few examples by replacing deprecated directives.

* Sat Aug 20 2011 Thunor <thunorsif@hotmail.com>
- Added signals.c/h.

* Fri Aug 19 2011 Thunor <thunorsif@hotmail.com>
- Started to implement the togglebutton widget (create works so far).
- Fixed a bug when freeing accel_groups: it needed to be set to NULL.

* Thu Aug 18 2011 Thunor <thunorsif@hotmail.com>
- Added widget_button.c/h.
- Added "use-underline" support to buttons with a label directive.

* Wed Aug 17 2011 Thunor <thunorsif@hotmail.com>